--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "leaflet": "^1.9.3",
     "prime": "^0.5.0",
     "primeflex": "^3.3.0",
+    "primeicons": "^6.0.1",
     "primeng": "^15.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
